<resources>
    <string name="app_name">CatNote</string>


    <string name="login_button">Log in</string>
    <string name="logout_button">Log out</string>
    <string name="registration_button">Sign up</string>
    <string name="settings_button">Settings</string>
    <string name="back_button">Back</string>
    <string name="change_button">Change</string>
    <string name="save_button">Save</string>
    <string name="finger_button">on Finger</string>

    <string name="finger_switch">Fingerprint</string>


    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="password">Password</string>

    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>